--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3' // Use the latest version supported by your Android Studio
+        classpath 'com.android.tools.build:gradle:7.3.1'
     }
 }
 
