--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
         Properties properties = new Properties()
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
         manifestPlaceholders = [googleMapsApiKey: "${properties.getProperty('GOOGLE_MAPS_API_KEY')}"]
+
+        buildConfigField "String", "BASE_URL", "\"${properties.getProperty("BASE_URL")}\""
     }
 
     buildTypes {
