--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
         manifestPlaceholders = [googleMapsApiKey: "${properties.getProperty('GOOGLE_MAPS_API_KEY')}"]
 
-        buildConfigField "String", "BASE_URL", "\"${properties.getProperty("BASE_URL")}\""
+        buildConfigField "String", "BASE_URL_WORKOUT", "\"${properties.getProperty("BASE_URL_WORKOUT")}\""
     }
 
     buildTypes {
