--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      -
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Install dependencies
         run: ./.github/workflows/install_dependencies.sh
