--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity
             android:name=".LogInActivity"
             android:exported="true"
-            tools:ignore="LockedOrientationActivity">
+            android:screenOrientation="locked">
 <!--        <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
@@ -41,7 +41,7 @@
             android:name=".SettingsActivity"
             android:exported="false"
             android:label="@string/title_activity_settings"
-            tools:ignore="LockedOrientationActivity">
+            android:screenOrientation="locked">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -49,7 +49,7 @@
         <activity
             android:name=".RunningActivity"
             android:exported="false"
-            tools:ignore="LockedOrientationActivity">
+            android:screenOrientation="locked">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -68,7 +68,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            tools:ignore="LockedOrientationActivity">
+            android:screenOrientation="locked">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
