--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         manifestPlaceholders = [googleMapsApiKey: "${properties.getProperty('GOOGLE_MAPS_API_KEY')}"]
 
         buildConfigField "String", "BASE_URL_WORKOUT", "\"${properties.getProperty("BASE_URL_WORKOUT")}\""
+        buildConfigField "String", "BASE_URL_GUILD", "\"${properties.getProperty("BASE_URL_GUILD")}\""
     }
 
     buildTypes {
@@ -40,6 +41,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 }
 
